[package]
name = "tulip-net"
description = "WireGuard VPN builder"
license = "BSD-3-Clause"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "tulip"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
qrcode-generator = "4.1.8"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.93"
ureq = { version = "2.7.0", features = ["json"] }
